Search dropdown design fixes (alignment).
Bug: T266603

--- a/resources/skin.wikimediaapiportal.styles/common-fixes.less
+++ b/resources/skin.wikimediaapiportal.styles/common-fixes.less
@@ -24,8 +24,16 @@
 	}
 }
 
+.imeselector {
+	height: 22px !important;
+}
+
 .imeselector-toggle {
 	z-index: 9999 !important;
+}
+
+.imeselector-menu .selectable-row {
+	height: 19px !important;
 }
 
 .grid .uls-language-list.row {
